--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -93,6 +93,7 @@ table {
     font-weight: 400;
     border-collapse: collapse;
     width: 100%;
+    cursor: pointer;
 }
 
 tr {
@@ -106,6 +107,10 @@ tr:hover {
 
 td {
     padding-left: 50px;
+}
+
+.color {
+    color: rgb(152, 80, 77);
 }
 
 /* === Signature === */
