--- a/CSS/recipestyles.css
+++ b/CSS/recipestyles.css
@@ -1,7 +1,7 @@
 body {
     color: #333;
     background-color: rgb(239, 222, 211);
-    margin: 120px;
+    margin: 123px;
 }
 
 @media screen and (max-width:768px) {
@@ -14,8 +14,8 @@ body {
 .container {
     display: flex;
     margin: 0 auto;
-    height: 1700px;
-    width: 600px;
+    height: 1600px;
+    width: 620px;
     background-color: #FFF;
     border-radius: 20px;
     padding: 40px;
@@ -24,43 +24,43 @@ body {
 
 .img {
     height: 300px;
-    width: 600px;
+    width: 620px;
     border-radius: 20px;
+    margin-bottom: 20px;
 }
 
 .TitleRecipe {
-    font-size: 33px;
+    font-size: 35px;
     font-family: 'Young Serif', serif;
-    font-weight: 400;
+    font-weight: 600;
     letter-spacing: 1.30px;
 }
 
 .description {
     font-family: 'Outfit', sans-serif;
     font-size: 14px;
-    line-height: 30px;
-    color: #777;
+    line-height: 25px;
+    color: #666;
     letter-spacing: 0.3px;
-    font-weight: 400;
+    font-weight: 500;
 }
 
 /* === preparation time === */
 .PrepatTime {
     font-family: 'Outfit', sans-serif;
-    margin-top: 30px;
-    margin-left: 30px;
+    margin-top: 20px;
     line-height: 30px;
     color: #666;
-    background-color: #faf7f7;
+    background-color: #fffffb;
     padding: 20px;
     font-size: 16px;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 .headingPrepat {
-    color: #713c6a;
-    font-family: 'Outfit', sans-serif;
-    font-size: 24px;
+    color: #965b74;
+    font-family: 'inter', sans-serif;
+    font-size: 22px;
 }
 
 /* === Ingredients === */
@@ -68,24 +68,29 @@ body {
     font-family: 'Outfit', sans-serif;
     font-size: 16px;
     line-height: 30px;
-    color: #777;
-    letter-spacing: 0.3px;
+    color: #666;
     font-weight: 400;
 }
 
 .header {
-    font-size: 26px;
+    font-size: 24px;
     color: rgb(152, 80, 77);
     font-family: 'Young serif', serif;
     letter-spacing: 1px;
+    margin-top: 25px;
 }
 
+/* === Line === */
+.line {
+    border: 0.01px solid #f5ede4;
+}
+
+/* === Instruction === */
 .Instructions {
     font-family: 'Outfit', sans-serif;
     font-size: 16px;
-    line-height: 30px;
-    color: #777;
-    letter-spacing: 0.3px;
+    line-height: 25px;
+    color: #666;
     font-weight: 400;
 }
 
@@ -93,8 +98,8 @@ body {
 table {
     font-family: 'Outfit', sans-serif;
     font-size: 14px;
-    line-height: 40px;
-    color: #777;
+    line-height: 35px;
+    color: #666;
     letter-spacing: 0.3px;
     font-weight: 400;
     border-collapse: collapse;
@@ -119,6 +124,7 @@ tr:hover {
 .color {
     color: rgb(152, 80, 77);
     margin-right: 100px;
+    font-weight: 600;
 }
 
 /* === Signature === */
